scripts/nullness/nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8.txt
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinFitnessFunction.java:120: error: [argument] incompatible argument for parameter antibody of GeneticMatchResult constructor.
        return new GeneticMatchResult(bestMatch, bestMatchScore);
                                      ^
  found   : @Initialized @NonNull boolean @Initialized @Nullable []
  required: @Initialized @NonNull boolean @Initialized @NonNull []
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinFitnessFunction.java:152: error: [return] incompatible types in return.
        return bestMatch;
               ^
  type of expression: @Initialized @NonNull boolean @Initialized @Nullable []
  method return type: @Initialized @NonNull boolean @Initialized @NonNull []
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/BaldwinGA.java:86: error: [argument] incompatible argument for parameter antibodies of BaldwinFitnessFunction.findBestGeneticMatch.
                GeneticMatchResult result = fitnessFunction.findBestGeneticMatch(antigen, antibodies);
                                                                                          ^
  found   : @Initialized @NonNull boolean @Initialized @Nullable [] @Initialized @NonNull []
  required: @Initialized @NonNull boolean @Initialized @NonNull [] @Initialized @NonNull []
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:209: error: [argument] incompatible argument for parameter arg1 of IJGAPFactory.getCloneHandlerFor.
                ICloneHandler cloner = getConfiguration().getJGAPFactory().getCloneHandlerFor(selectedChromosome, null);
                                                                                                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:212: error: [argument] incompatible argument for parameter arg1 of IHandler.perform.
                        IChromosome cloned = (IChromosome) cloner.perform(selectedChromosome, null, null);
                                                                                              ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:212: error: [argument] incompatible argument for parameter arg2 of IHandler.perform.
                        IChromosome cloned = (IChromosome) cloner.perform(selectedChromosome, null, null);
                                                                                                    ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java:371: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull RankProportionalRouletteSelector
    @Initialized @NonNull boolean equals(@Initialized @NonNull RankProportionalRouletteSelector this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:116: error: [argument] incompatible argument for parameter arg1 of IJGAPFactory.getCloneHandlerFor.
                ICloneHandler cloner = getConfiguration().getJGAPFactory().getCloneHandlerFor(selectedChromosome, null);
                                                                                                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:119: error: [argument] incompatible argument for parameter arg1 of IHandler.perform.
                        IChromosome cloned = (IChromosome) cloner.perform(selectedChromosome, null, null);
                                                                                              ^
  found   : null (NullType)
  required: @Initialized @NonNull Class</*RAW*/>
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:119: error: [argument] incompatible argument for parameter arg2 of IHandler.perform.
                        IChromosome cloned = (IChromosome) cloner.perform(selectedChromosome, null, null);
                                                                                                    ^
  found   : null (NullType)
  required: @Initialized @NonNull Object
../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalSelector.java:242: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull RankProportionalSelector
    @Initialized @NonNull boolean equals(@Initialized @NonNull RankProportionalSelector this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
Note: ../nullgtn/url458e40ff41_mmacfadden_java_baldwin_ga_tgz-pJ8-edu_sdsu_cs652_si_baldwin_SimulationEngineJ8/src/edu/sdsu/cs652/si/baldwin/RankProportionalRouletteSelector.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
11 errors
